# focalnet-rs

./: .gitignore  Cargo.toml  readme.md
convert-pth-to-bin/: Cargo.toml  focalnet.py  import_weight_from_pth.py
convert-pth-to-bin/src/: main.rs
focalnet/: Cargo.toml
focalnet/src/: lib.rs
focalnet/src/burn_ext/: sequential.rs
focalnet/src/model/: basic_layer.rs  focal_block.rs  focal_modulation.rs  focal_net.rs  mod.rs  patch_embed.rs
focalnet/src/utils/: mod.rs  tensor_wrapper.rs
inference/: Cargo.toml
inference/src/: image_processing.rs  imagenet_classes.rs  lib.rs  main.rs
